syntax = "proto3";

package com.github.hideto0710.protos;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayError (HelloRequest) returns (HelloReply) {}
    rpc SayHelloAll (HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
